versions/26.1.2/translated/it_it/develop/items/custom-tools.md
---
title: Utensili e Armi
description: Impara come creare il tuo utensile e configurarne le proprietà.
authors:
  - IMB11
---

Gli utensili sono essenziali per la sopravvivenza e l'avanzamento, poiché permettono ai giocatori di raccogliere risorse, costruire edifici, e difendere se stessi.

## Creare un Materiale dell'Utensile {#creating-a-tool-material}

Puoi creare un materiale degli utensili istanziando un nuovo oggetto `ToolMaterial` e memorizzandolo in un attributo da usare dopo per creare gli oggetti degli utensili che usano il materiale.

<<< @/reference/26.1.2/src/main/java/com/example/docs/item/ModItems.java#guidite_tool_material

Il costruttore di `ToolMaterial` accetta i parametri seguenti, in questo ordine:

| Parametro                 | Descrizione                                                                                                                                                                                  |
| ------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `incorrectBlocksForDrops` | Se un blocco è nel tag incorrectBlocksForDrops, significa che quando si usa un'utensile fatto di questo `ToolMaterial` su quel blocco, il blocco non dropperà alcun oggetto. |
| `durability`              | La durabilità di tutti gli utensili fatti di questo `ToolMaterial`.                                                                                                          |
| `speed`                   | La velocità con cui tutti gli utensili fatti di questo `ToolMaterial` rompono, per esempio, i blocchi.                                                                       |
| `attackDamageBonus`       | Il danno aggiuntivo in attacco che avranno gli utensili di questo `ToolMaterial`.                                                                                            |
| `enchantmentValue`        | L'"incantabilità" degli utensili fatti di questo `ToolMaterial`.                                                                                                             |
| `repairItems`             | Tutti gli oggetti in questo tag possono essere usati per riparare utensili di questo `ToolMaterial` in un'incudine.                                                          |

Per questo esempio, useremo lo stesso oggetto di riparo che useremo per l'armatura. Definiamo il riferimento di tag come segue:

<<< @/reference/26.1.2/src/main/java/com/example/docs/item/armor/GuiditeArmorMaterial.java#repair_tag

Se fai fatica a determinare valori adatti per ciascuno dei parametri numerici, considera le costanti dei materiali di utensili vanilla, tra cui `ToolMaterial.STONE` o `ToolMaterial.DIAMOND`.

## Creare Oggetti per gli Utensili {#creating-tool-items}

Con la stessa funzione di utilità della guida [Creare il Tuo Primo Oggetto](./first-item), puoi creare gli oggetti dei tuoi utensili:

<<< @/reference/26.1.2/src/main/java/com/example/docs/item/ModItems.java#guidite_sword

I due valori float (`1f, 1f`) fanno riferimento al danno in attacco dell'utensile e alla sua velocità d'attacco rispettivamente.

Ricorda di aggiungerli a una scheda se vuoi accedere ad essi dall'inventario in Creativa!

<<< @/reference/26.1.2/src/main/java/com/example/docs/item/ModItems.java#add_guidite_sword_to_create_tab

Dovrai anche aggiungere una texture, una traduzione e un modello per l'oggetto. Tuttavia, per i modelli, dovrai usare il modello `item/handheld` come genitore, invece del solito `item/generated`.

Per questo esempio, useremo il modello e la texture seguenti per l'oggetto "Spada di Guidite":

<<< @/reference/26.1.2/src/main/generated/assets/example-mod/models/item/guidite_sword.json

<DownloadEntry visualURL="/assets/develop/items/tools_0.png" downloadURL="/assets/develop/items/tools_0_small.png">Texture</DownloadEntry>

Questo è praticamente tutto! Se passi al gioco dovresti vedere gli oggetti dei tuoi strumenti nella scheda utensili dell'inventario in Creativa.

![Utensili nell'inventario](/assets/develop/items/tools_1.png)
